# woodster-jigsaw-solver

./: AGENTS.md  README.md  pyproject.toml
src/gui/: board_tab.py  editor_window.py  piece_tab.py  visualization_window.py
src/logic/: solver.py
src/models/: board.py  puzzle_config.py
src/polyomino_jigsaw_solver/: __main__.py
src/polyomino_jigsaw_solver/gui/: __init__.py  board_tab.py  main_window.py  piece_editor.py  piece_list.py  piece_shape_widget.py  piece_tab.py
src/polyomino_jigsaw_solver/models/: puzzle_board.py
tests/: test_puzzle_piece.py
tests/unit/: test_file_io.py  test_solver.py
