[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyomino-jigsaw-solver"
version = "0.1.0"
description = "A solver for puzzles with polyomino shaped pieces"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.0",
    "pillow>=12.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
